[gd_scene load_steps=15 format=2]

[ext_resource path="res://Arial_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://arial_4.tres" type="DynamicFont" id=2]
[ext_resource path="res://Arial_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://arial_3.tres" type="DynamicFont" id=4]
[ext_resource path="res://BMCard.gd" type="Script" id=5]
[ext_resource path="res://Resources/Color_back/blue_red_back.png" type="Texture" id=6]
[ext_resource path="res://Resources/nametag.png" type="Texture" id=7]
[ext_resource path="res://Resources/tag.png" type="Texture" id=8]
[ext_resource path="res://Resources/heart.png" type="Texture" id=9]
[ext_resource path="res://Resources/orange_tag.png" type="Texture" id=10]
[ext_resource path="res://Resources/sword.png" type="Texture" id=11]
[ext_resource path="res://Resources/gray_back.png" type="Texture" id=12]
[ext_resource path="res://Resources/Card_images/Card_1.png" type="Texture" id=13]
[ext_resource path="res://Resources/bolt.png" type="Texture" id=14]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Card" type="Sprite" parent="."]
position = Vector2( -0.055, 0 )
scale = Vector2( 1, 1.01455 )
z_index = -1
texture = ExtResource( 6 )

[node name="Type_label" type="Sprite" parent="Card"]
position = Vector2( 402.389, -266.976 )
scale = Vector2( 0.405201, 0.37768 )
texture = ExtResource( 10 )

[node name="Type" type="Label" parent="Card/Type_label"]
margin_left = -197.721
margin_top = -113.484
margin_right = 371.279
margin_bottom = 132.516
rect_rotation = 7.12111
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Eroe"
align = 1
valign = 1

[node name="Family_label1" type="Sprite" parent="Card"]
position = Vector2( 402.389, -51.117 )
scale = Vector2( 0.405201, 0.37768 )
texture = ExtResource( 8 )

[node name="Family1" type="Label" parent="Card/Family_label1"]
margin_left = -197.721
margin_top = -113.484
margin_right = 371.279
margin_bottom = 132.516
rect_rotation = 7.12111
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Alcolico"
align = 1
valign = 1

[node name="Family_label2" type="Sprite" parent="Card"]
position = Vector2( 402.389, 78.99 )
scale = Vector2( 0.405201, 0.37768 )
texture = ExtResource( 8 )

[node name="Family2" type="Label" parent="Card/Family_label2"]
margin_left = -197.721
margin_top = -113.484
margin_right = 371.279
margin_bottom = 132.516
rect_rotation = 7.12111
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Professore"
align = 1
valign = 1

[node name="Card_image" type="Sprite" parent="Card"]
position = Vector2( 1.35172, -110.912 )
scale = Vector2( 0.908727, 0.892023 )
texture = ExtResource( 13 )

[node name="Effect_text" type="Sprite" parent="Card"]
position = Vector2( 1.35175, 333.47 )
scale = Vector2( 0.962238, 0.99724 )
texture = ExtResource( 12 )

[node name="Container" type="MarginContainer" parent="Card/Effect_text"]
light_mask = -2147483647
margin_left = -313.0
margin_top = -186.0
margin_right = 319.0
margin_bottom = 137.0

[node name="Effect" type="RichTextLabel" parent="Card/Effect_text/Container"]
margin_top = 35.0
margin_right = 632.0
margin_bottom = 287.0
size_flags_vertical = 4
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Quando questo eroe muore, se si trovava nella zona rossa guadagni 50 di libido

Quando questo eroe viene evocato, se si trova nella zona follia, uccide il servitore davanti.

[tornado radius=10 freq=20]Dispetto: raddoppia la tua libido[/tornado]"
text = "Quando questo eroe muore, se si trovava nella zona rossa guadagni 50 di libido

Quando questo eroe viene evocato, se si trova nella zona follia, uccide il servitore davanti.

Dispetto: raddoppia la tua libido"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_tag" type="Sprite" parent="Card"]
position = Vector2( 11.9549, -427.199 )
scale = Vector2( 1.11613, 0.763594 )
texture = ExtResource( 7 )

[node name="Title_container" type="MarginContainer" parent="Card"]
light_mask = -2147483647
margin_left = -250.979
margin_top = -487.14
margin_right = 245.021
margin_bottom = -389.14

[node name="Card_name" type="RichTextLabel" parent="Card/Title_container"]
margin_top = 2.0
margin_right = 496.0
margin_bottom = 96.0
size_flags_vertical = 4
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Eleonora, la sognatrice di mondi paralleli"
text = "Eleonora, la sognatrice di mondi paralleli"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart" type="Sprite" parent="Card"]
position = Vector2( 309.409, 503.617 )
scale = Vector2( 0.315928, 0.315569 )
texture = ExtResource( 9 )

[node name="health" type="Label" parent="Card/heart"]
margin_left = -127.751
margin_top = -124.307
margin_right = -10.751
margin_bottom = -45.3074
rect_scale = Vector2( 2.2, 2.2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "9"
align = 1

[node name="sword" type="Sprite" parent="Card"]
position = Vector2( -262.519, 475.813 )
rotation = -1.56959
scale = Vector2( 0.619618, 0.641669 )
texture = ExtResource( 11 )

[node name="attack" type="Label" parent="Card/sword"]
margin_left = 38.7042
margin_top = -59.4272
margin_right = 147.704
margin_bottom = 19.5728
rect_rotation = 90.1772
rect_scale = Vector2( 1.1, 1.1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1

[node name="Bolts" type="Node2D" parent="Card"]
position = Vector2( 1.35172, -1.41333 )
scale = Vector2( 1, 0.985659 )

[node name="bolt1" type="Sprite" parent="Card/Bolts"]
position = Vector2( -267.97, -295 )
scale = Vector2( 0.18742, 0.237287 )
texture = ExtResource( 14 )

[node name="bolt2" type="Sprite" parent="Card/Bolts"]
position = Vector2( -267.97, -205 )
scale = Vector2( 0.18742, 0.237287 )
texture = ExtResource( 14 )

[node name="bolt3" type="Sprite" parent="Card/Bolts"]
position = Vector2( -267.97, -115 )
scale = Vector2( 0.18742, 0.237287 )
texture = ExtResource( 14 )

[node name="bolt4" type="Sprite" parent="Card/Bolts"]
position = Vector2( -267.97, -25 )
scale = Vector2( 0.18742, 0.237287 )
texture = ExtResource( 14 )

[node name="bolt5" type="Sprite" parent="Card/Bolts"]
position = Vector2( -267.97, 65 )
scale = Vector2( 0.18742, 0.237287 )
texture = ExtResource( 14 )

[node name="Card_shape" type="Control" parent="."]
margin_left = -332.0
margin_top = -546.0
margin_right = 338.0
margin_bottom = 556.0
